// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.governance;

option java_multiple_files = true;

// next ID: 13
message PolicyMetadata {
  string policyId = 1;
  string policyName = 2;
  string severity = 3;
  repeated string denyMessages = 4;
  string status = 5;
  string identifier = 6;
  string accountId = 7;
  string orgId = 8;
  string projectId = 9;
  int64 created = 10;
  int64 updated = 11;
  string error = 12;
}

// next ID: 11
message PolicySetMetadata {
  string policySetId = 1;
  bool deny = 2;
  repeated PolicyMetadata policyMetadata = 3;
  string policySetName = 4;
  string status = 5;
  string identifier = 6;
  int64 created = 7;
  string accountId = 8;
  string orgId = 9;
  string projectId = 10;
}

// next ID: 14
message GovernanceMetadata {
  string id = 1;
  bool deny = 2;
  repeated PolicySetMetadata details = 3;
  string message = 4;
  int64 timestamp = 5;
  string status = 6;
  string accountId = 7;
  string orgId = 8;
  string projectId = 9;
  string entity = 10;
  string type = 11;
  string action = 12;
  int64 created = 13;
}
